--- a/hts_moveit_config/config/bio_ik_kinematics.yaml
+++ b/hts_moveit_config/config/bio_ik_kinematics.yaml
@@ -1,4 +1,4 @@
-panda_arm:
+fr3_arm:
   kinematics_solver: bio_ik/BioIKKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
   kinematics_solver_timeout: 0.05
